--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,6 +23,7 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'new_post'%}">Crear entrada <span class="sr-only">(current)</span></a>
           
             
           <form class="form-inline my-2 my-lg-0">
