--- a/blog/templates/blog/delete_post.html
+++ b/blog/templates/blog/delete_post.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block title %}
-Nueva entrada
+Eliminar post
 
 {% endblock %}
 
@@ -10,7 +10,8 @@ Nueva entrada
 
   {% csrf_token %}
   {{ form.as_p }}
-  <button class="btn btn-success"> Subir </button>
+  <strong>Tas sure bro?!</strong><br/>
+  <button class="btn btn-success"> Eliminar </button>
 
 
 
