--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,7 +5,11 @@
  <ul>
  {% for post in object_list %}
     
-    <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from {{post.author.first_name}} {{post.author.last_name}} - <a href="{% url 'edit_post' post.pk %}">Editar</a> <a href="{% url 'delete_post' post.pk %}">Borrar</a><br/>
+    <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from {{post.author.first_name}} {{post.author.last_name}} - 
+      {% if user.is_authenticated %} 
+      <a href="{% url 'edit_post' post.pk %}">Editar</a> 
+      <a href="{% url 'delete_post' post.pk %}">Borrar</a><br/>
+      {% endif %}
     {{post.resumen}}</li>
 
  {% endfor %}
