--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,10 +20,20 @@
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          {% if user.is_authenticated %}
+
+          
+          <a class="nav-link" href="{% url 'new_post'%}">Crear entrada <span class="sr-only"></span></a>
+          <a class="nav-link" href="{% url 'logout' %}"> Log-out <span class="sr-only"></span></a>
+          {% else %}
+          
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only">(current)</span></a>
-              <a class="nav-link" href="{% url 'new_post'%}">Crear entrada <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only"></span></a>
+              
+              <a class="nav-link" href="{% url 'registro' %}"> Registrarse  <span class="sr-only"></span></a>
+              <a class="nav-link" href="{% url 'login' %}"> Log-in <span class="sr-only"></span></a>
+          {% endif %}  
           
             
           <form class="form-inline my-2 my-lg-0">
