--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-
+<center/>
 <h2> {{ post.title }} </h2>
 <h5> por {{ post.author.first_name }} {{ post.author.last_name }}<a href="{% url 'edit_post' post.pk %}">    <small>Editar</small></a> <a href="{% url 'delete_post' post.pk %}">    <small>Borrar</small></a> </h5>
 <br/>
