--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -7,10 +7,14 @@
 {% block content %}
 <center/>
 <h2> {{ post.title }} </h2>
-<h5> por {{ post.author.first_name }} {{ post.author.last_name }}<a href="{% url 'edit_post' post.pk %}">    <small>Editar</small></a> <a href="{% url 'delete_post' post.pk %}">    <small>Borrar</small></a> </h5>
+<h10> por <b>{{ post.author.first_name }} {{ post.author.last_name }}
+</b>
+    {% if user.is_authenticated %}     
+<a href="{% url 'edit_post' post.pk %}">    <small>Editar</small></a> <a href="{% url 'delete_post' post.pk %}">    <small>Borrar</small></a> </h10>
+{% endif %}
 <br/>
-{{ post.resumen}} </br></br>
-{{ post.body }}
+</br>
+{{ post.body|safe }}
 
 
 <br/><br/><br/>
