--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,13 +5,18 @@
  <ul>
  {% for post in object_list %}
     
-    <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from {{post.author.first_name}} {{post.author.last_name}} - 
+    <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from <b>{{post.author.first_name}} {{post.author.last_name}}</b> - 
       {% if user.is_authenticated %} 
       <a href="{% url 'edit_post' post.pk %}">Editar</a> 
       <a href="{% url 'delete_post' post.pk %}">Borrar</a><br/>
+      
       {% endif %}
-    {{post.resumen}}</li>
-
+      {{ post.body|slice:":50"}}
+      <br/>
+      <br/>
+      
+    </li>
+   
  {% endfor %}
  </ul>
 
