--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -6,10 +6,13 @@ Editar post
 
 {% block content %}
 {% if user.is_authenticated %}
+<center/>
 <form method="POST">
 
   {% csrf_token %}
+  {{ form.media }}
   {{ form.as_p }}
+  
   <button class="btn btn-success"> Editar </button>
 
 {% else %}
