--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -9,6 +9,7 @@ Nueva entrada
 <form method="POST">
 
   {% csrf_token %}
+  {{ form.media }}
   {{ form.as_p }}
   <button class="btn btn-success"> Crear </button>
 
