solo puede editar el autor del post

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,6 +25,7 @@
           
           <a class="nav-link" href="{% url 'new_post'%}">Crear entrada <span class="sr-only"></span></a>
           <a class="nav-link" href="{% url 'logout' %}"> Log-out <span class="sr-only"></span></a>
+          <a class="nav-link" href="{% url 'editar-user' %}"> Editar Usuario <span class="sr-only"></span></a>
           {% else %}
           
           <ul class="navbar-nav mr-auto">
