--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,9 +7,10 @@
     
     <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from <b>{{post.author.first_name}} {{post.author.last_name}}</b> - 
       {% if user.is_authenticated %} 
-      <a href="{% url 'edit_post' post.pk %}">Editar</a> 
-      <a href="{% url 'delete_post' post.pk %}">Borrar</a><br/>
-      
+        {% if user.id == post.author.id %}   
+          <a href="{% url 'edit_post' post.pk %}">Editar</a> 
+          <a href="{% url 'delete_post' post.pk %}">Borrar</a><br/>
+        {% endif %}
       {% endif %}
       {{ post.resume|slice:":100"|safe}}
       <br/>
