--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -24,10 +24,9 @@
 
           <a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only"></span></a>
           <a class="nav-link" href="{% url 'new_post'%}">Crear entrada <span class="sr-only"></span></a>
+          <a class="nav-link" href="{% url 'profile-details' user.profile.id %}"> Mi perfil <span class="sr-only"></span></a>
           
-
           <a class="nav-link" href="{% url 'editar-user' %}"> Editar Usuario <span class="sr-only"></span></a>
-
           <a class="nav-link" href="{% url 'logout' %}"> Log-out <span class="sr-only"></span></a>
           {% else %}
           
