--- a/blog/templates/blog/profile-details.html
+++ b/blog/templates/blog/profile-details.html
@@ -7,8 +7,8 @@ Perfil
 
 {{ page_user }}
 <img src="{{ profile.imagen.url }}"width=150">
-{{ profile.user.first_name }}
-{{ profile.user.last_name }}
+<b>{{ profile.user.first_name }}
+{{ profile.user.last_name }}</b>
 {{ user.profile.bio }}
 
 
