--- a/blog/templates/blog/profile-details.html
+++ b/blog/templates/blog/profile-details.html
@@ -9,7 +9,7 @@ Perfil
 <img src="{{ profile.imagen.url }}"width=150">
 <b>{{ profile.user.first_name }}
 {{ profile.user.last_name }}</b>
-{{ user.profile.bio }}
+{{ profile.bio }}
 
 
 {% endblock %}
