--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -19,7 +19,7 @@ Nueva entrada
 </div>
 <script>
   var name = "{{ user.id }}";
-  document.getElementById("elder").value 
+  document.getElementById("a").value 
       = name;
 
 
