--- a/miembros/templates/registration/login.html
+++ b/miembros/templates/registration/login.html
@@ -24,8 +24,10 @@ Login
 </div>
 <button type="success" class="btn btn-primary">Login</button>
 
+<br/>
+<br/>
 
-</div>
+  <a href="{% url 'registro' %}"> No tenes cuenta? Registrarse aqui  <span class="sr-only"></span></a>
 {% endif %}
 
 
