ahora si todo el backend hecho ajsjads

--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -8,14 +8,16 @@
 <center/>
 
 <h2> {{ post.title }} </h2>
-<h10> por <b>{{ post.author.first_name }} {{ post.author.last_name }}
-</b>
+<h10> por <b>{{ post.author.first_name }} {{ post.author.last_name }} 
+</b>{{ post.post_date }}
     {% if user.is_authenticated %}
         {% if user.id == post.author.id %}     
 <a href="{% url 'edit_post' post.pk %}">    <small>Editar</small></a> <a href="{% url 'delete_post' post.pk %}">    <small>Borrar</small></a> </h10>
 {% endif %}
 {% endif %}
-
+<br/>
+<img src="{{ post.imagen.url }}"width=150">
+<br/>
 {{ post.body|safe }}
 
 
