--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -8,8 +8,9 @@
 <center/>
 
 <h2> {{ post.title }} </h2>
-<h10> por <b>{{ post.author.first_name }} {{ post.author.last_name }} 
-</b>{{ post.post_date }}
+<h10>  <small> por <b>{{ post.author.first_name }} {{ post.author.last_name }} 
+</b>{{ post.post_date }}</small>
+
     {% if user.is_authenticated %}
         {% if user.id == post.author.id %}     
 <a href="{% url 'edit_post' post.pk %}">    <small>Editar</small></a> <a href="{% url 'delete_post' post.pk %}">    <small>Borrar</small></a> </h10>
