--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -22,6 +22,8 @@
 {{ post.body|safe }}
 
 
+
+
 <br/><br/><br/>
 
 <a href="{% url 'home' %}" class="btn btn-secondary"> Home </a>
@@ -29,15 +31,23 @@
 
 
 Post hecho por
-<br/>
-<img src="{{ post.author.profile.imagen.url }}"width=150">
+</div>
+<footer class="footer mt-auto py-3 bg-light">
+    
+<img src="{{ post.author.profile.imagen.url }}" width="100" height="100">
+{{ post.author.profile.bio }}
 <b>
-    <a href="{% url 'profile-details' post.author.profile.id %}"> {{ post.author.profile.user.first_name }}
-        {{ post.author.profile.user.last_name }}</a>
+    <a href="{% url 'profile-details' post.author.profile.id %}">  <br/>{{ post.author.profile.user.first_name }} {{ post.author.profile.user.last_name }}</a>
 </b>
 
-{{ post.author.profile.bio }}
 
+ <div class="container">
+   <span class="text-muted"></span>
+ </div>
+<div class="d-flex p-2">
+
+
+</div>
 
 
 {% endblock %}
