--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,103 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
+{% load static %}
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>{% block title %}{% endblock %}</title>
-  </head>
-  <body>
-    
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home'%}">Futbol blog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          {% if user.is_authenticated %}
-
-          <a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only"></span></a>
-          <a class="nav-link" href="{% url 'new_post'%}">Crear entrada <span class="sr-only"></span></a>
-          
-          
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Mi perfil
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-              {% if user.profile.id %}
-              <a class="nav-link" href="{% url 'profile-details' user.profile.id %}"> Ver perfil <span class="sr-only"></span></a>
-              <a class="nav-link" href="{% url 'profile-edit' user.profile.id %}"> Editar perfil <span class="sr-only"></span></a>
-              {% else %}
-              <a class="nav-link" href="{% url 'new-profile' %}"> Crear perfil <span class="sr-only"></span></a>
-              {% endif %}
-              <a class="nav-link" href="{% url 'editar-user' %}">   Editar datos de Usuario <span class="sr-only"></span></a>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Dashboard - SB Admin</title>
+        <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" />
+        <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
+        <script src="{% static 'vendor/datatables/dataTables.bootstrap4.css' %}" crossorigin="anonymous"></script>
+    </head>
+    <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <!-- Navbar Brand-->
+            <a class="navbar-brand ps-3" href="index.html">Mi blog generico!</a>
+            <!-- Sidebar Toggle-->
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" method=POST action="{% url 'search' %}">
               
-            </div>
-          </div>
-          
-          <a class="nav-link" href="{% url 'logout' %}"> Log-out <span class="sr-only"></span></a>
-          {% else %}
-          
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only"></span></a>
-            </li>
-            
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}"> Log-in <span class="sr-only"></span></a>
-            </li>
+                <div class="input-group">
+           
+                    <input class="form-control" type="text" placeholder="Buscar Posts..." aria-label="Buscar Posts..." name="searched" aria-describedby="btnNavbarSearch" />
+                    {% csrf_token %}
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </div>
+            </form>
+            <!-- Navbar-->
+            {% if user.is_authenticated%}
+            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+                <li class="nav-item dropdown">\
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{% url 'editar-user' %}">Editar datos de usuario</a></li>
+                        {% if user.profile %}
+                        <li><a class="dropdown-item" href="{% url 'profile-edit' user.profile.id %}">Editar perfil</a></li>
+                        {% else %}
+                        <li><a class="dropdown-item" href="{% url 'new-profile'  %}">Crear perfil</a></li>
+                        {% endif %}
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                </li>
             </ul>
-          {% endif %}  
-          
-            
-          <form class="form-inline my-2 my-lg-0" method=POST action="{% url 'search' %}">
-            {% csrf_token %}
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="searched">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-          
+            {% else %}
+            {% endif %}
+          </nav>
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <div class="sb-sidenav-menu-heading"></div>
+                            <a class="nav-link" href="{% url 'home'%}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Home
+                            </a>
+                            {% if user.is_authenticated %}
+                            <div class="sb-sidenav-menu-heading">Mi usuario</div>
+                            {% if user.profile.id %}
+                            <a class="nav-link" href="{% url 'profile-details' user.profile.id %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Ver perfil
+                            </a>
+                            {% else %}
+                            <a class="nav-link" href="{% url 'new-profile' %}">
+                              <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                              Crear perfil
+                            </a>
+                            {% endif %}
+                            <a class="nav-link" href="{% url 'myposts'%}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Mis posts
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Posts</div>
+                            <a class="nav-link" href="{% url 'new_post'%}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Crear post
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Acciones</div>
+                            <a class="nav-link" href="{% url 'logout'%}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Log out
+                            </a>
+                            {% else %}
+                            <div class="sb-sidenav-menu-heading">Identificarse</div>
+                            <a class="nav-link" href="{% url 'login'%}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Log-in
+                            </a>
+                            {% endif %}
+
+                           
+                            
+                           
+                            <div class="sb-sidenav-menu-heading"></div>
+                            <a class="nav-link" href="charts.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                              
+                            </a>
+                            <a class="nav-link" href="tables.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="sb-sidenav-footer">
+                        {% if user.is_authenticated %}
+                        <div class="small">Logueado como:</div>
+                        {{ user.first_name }} {{ user.last_name }}
+                        {% else %}
+                        <div class="small">No estas logueado</div>
+                        {% endif %}
+
+                    </div>
+                </nav>
+            </div>
+            <div id="layoutSidenav_content">
+                <main>
+                    <div class="container-fluid px-4">
+                        <h1 class="mt-4">Mi blog!</h1>
+                        <ol class="breadcrumb mb-4">
+                            <li class="breadcrumb-item active"></li>
+                        </ol>
+                        
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6">
+
+                            </div>
+                            <div class="col-xl-6">
+                               
+                            </div>
+                        </div>
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <i class="fas fa-table me-1"></i>
+                                
+                            </div>
+                            <div class="card-body">
+                                <table id="datatablesSimple">
+                                    <thead>
+                                       {%block content%}
+                                       {% endblock %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+                
+            </div>
         </div>
-          
-      </nav>
-
-  <div class="container">
-
-    <main class="flex-shrink-0">
-      <div class="container">
-      
-  {% block content %}
-  
-  {% endblock %}
-      </div>
-      
-    </main>
-    
-
- 
- 
-  
- </div>
- 
- </div>
- <footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
-    <span class="text-muted"></span>
-  </div>
-</footer>
-
-  <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="assets/demo/chart-area-demo.js"></script>
+        <script src="assets/demo/chart-bar-demo.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+        <script src="js/datatables-simple-demo.js"></script>
+    </body>
 </html>
