--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,7 +5,7 @@
  <ul>
  {% for post in object_list %}
     
-    <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from <b>{{post.author.first_name}} {{post.author.last_name}}</b> - 
+    <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from <b>{{post.author.first_name}} {{post.author.last_name}}</b><br/><img src="{{ post.imagen.url }}"width=150"> - 
       {% if user.is_authenticated %} 
         {% if user.id == post.author.id %}   
           <a href="{% url 'edit_post' post.pk %}">Editar</a> 
