--- a/blog/templates/blog/mis-posts.html
+++ b/blog/templates/blog/mis-posts.html
@@ -3,23 +3,20 @@
     {% extends 'blog/base.html' %}
     {% block title %}
     
+    Mis posts
     
     {% endblock %}
     {% block content %}
     <ul>
         {% for post in object_list %}
         {%if post.author == user %}
-           <li><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from <b>{{post.author.first_name}} {{post.author.last_name}}</b><br/><img src="{{ post.imagen.url }}"width=150"> - 
-             {% if user.is_authenticated %} 
-               {% if user.id == post.author.id %}   
-                 <a href="{% url 'edit_post' post.pk %}">Editar</a> 
-                 <a href="{% url 'delete_post' post.pk %}">Borrar</a><br/>
-               {% endif %}
-             {% endif %}
-             {{ post.resume|slice:":100"|safe}}
-             <br/>
-             <br/>
-             
+        <li>
+          <div class="card" style="width: 18rem;">
+           <img src="{{ post.imagen.url }}" class="card-img-top" width="150" height="150">
+           <div class="card-body">
+             <p class="card-text"><a href ="{% url 'article-detail' post.pk %}"> {{post.title}} </a> from <b>{{post.author.first_name}} {{post.author.last_name}}</b></p>
+           </div>
+         </li>
            </li>
           {% endif %}
         {% endfor %}
