un par de detalles esteticos

--- a/blog/templates/blog/profile-details.html
+++ b/blog/templates/blog/profile-details.html
@@ -1,6 +1,10 @@
 {% extends 'blog/base.html' %}
 {% block title %}
-Perfil
+Perfil de 
+
+    <b>{{ profile.user.first_name }}
+    {{ profile.user.last_name }}</b>
+   
 
 {% endblock %}
 {% block content %}
@@ -8,10 +12,7 @@ Perfil
 {{ page_user }}
 
 <img src="{{ profile.imagen.url }}"  class="rounded" width="120" height="120"> 
-<p>
-<b>{{ profile.user.first_name }}
-{{ profile.user.last_name }}</b>
-</p>
+
 {{ profile.bio }}
 
 
