--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -48,6 +48,7 @@
                     </ul>
                 </li>
             </ul>
+
             {% else %}
             {% endif %}
           </nav>
@@ -88,6 +89,12 @@
                                 Crear post
                             </a>
                             <div class="sb-sidenav-menu-heading">Acciones</div>
+                            
+                            <a class="nav-link" href="{% url 'editar-user' %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Editar usuario
+
+
                             <a class="nav-link" href="{% url 'logout'%}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Log out
