--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -9,7 +9,14 @@
 <div class="card">
   
     <div class="card-body">
-      Este es un blog generico, es tan maleable que se puede hacer para cualquier tematica. Como soy una persona creativa, pero antes que eso, una persona que quiere que las cosas salgan, entonces elegi hacer uno de viajes, eliminando mi potencial creativo.
+      <p>
+      Es un blog comun y corriente hecho por Gonzalo Ponieman.
+    </p>
+    <p>
+      Basicamente los usuarios deben crear un perfil y desde ahi pueden crear posts y revisar los que crearon.
+      Tambien pueden editar sus datos de usario, perfil y posts, asi como borrarlos.
+
+    </p>
     </div>
   </div>
 
