--- a/blog/templates/blog/mis-posts.html
+++ b/blog/templates/blog/mis-posts.html
@@ -9,7 +9,7 @@
     {% block content %}
     <ul>
         {% for post in object_list %}
-        {%if post.author == user %}
+        {% if post.author == user %}
         <li>
           <div class="card" style="width: 18rem;">
            <img src="{{ post.imagen.url }}" class="card-img-top" width="150" height="150">
@@ -21,5 +21,23 @@
           {% endif %}
         {% endfor %}
     </ul>
+    <nav>
+      {% if is_paginated %}
+          <ul class="pagination">
+              {% if page_obj.has_previous %}
+                  <li><button type="button" class="btn btn-outline-dark btn-rounded" data-mdb-ripple-color="dark"><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></button></li>
+              {% endif %}
     
+              {% for i in paginator.page_range %}
+                  <li {% if page_obj.number == i %} class="active" {% endif %}>
+                      <li><button type="button" class="btn btn-outline-dark btn-rounded" data-mdb-ripple-color="dark"><a href="?page={{i}}">{{ i }}</a></button></li>
+                  </li>
+              {% endfor %}
+    
+              {% if page_obj.has_next %}
+                  <li><button type="button" class="btn btn-outline-dark btn-rounded" data-mdb-ripple-color="dark"><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></button></li>
+              {% endif %}
+          </ul>
+      {% endif %}
+    </nav>
     {% endblock %}
